# clipfix

./: .gitignore  LICENSE  README.md  clipfix.py  project.yaml  pyproject.toml  requirements.txt  ruleset.yaml  run_clipfix.bat
